# wasmadis

./: .gitignore  README.md  api_demo.py  example.py  justfile  pyproject.toml  setup.py  todo.md
src/wasmai/: __init__.py
tests/: test_advanced_features.py  test_edge_cases.py  test_execution.py  test_wasmtime_validation.py
wasmadis/: __init__.py  binary_encoder.py  instructions.py  module.py  sections.py  text_encoder.py  types.py
wasmai/: __init__.py  binary_encoder.py  instructions.py  module.py  sections.py  text_encoder.py  types.py
