[project]
name = "wasmai"
version = "0.1.0"
description = "Python dataclasses for representing WASM modules with WASM 2.0, GC, threads, and tail call support"
readme = "README.md"
authors = [
    { name = "jvs", email = "vonseg@protonmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "wasmtime>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "wasmtime>=25.0.0",
]
