[project]
name = "wasmadis"
version = "0.1.0"
description = "Python dataclasses for representing WASM modules with WASM 2.0, GC, threads, and tail call support"
readme = "README.md"
authors = [
    { name = "jvs", email = "vonseg@protonmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "wasmtime>=24.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"example.py" = ["F403", "F405", "I001"]  # Allow star imports in examples
"setup.py" = ["I001"]  # Allow import formatting in setup
"wasmadis/*.py" = ["F403", "F405", "I001", "F401", "E741"]  # Allow star imports and other style issues in main package
"tests/*.py" = ["F401", "F811", "I001", "E722", "F841"]  # Allow unused imports, bare except, and formatting in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false

[tool.coverage.run]
source = ["wasmadis"]
omit = [
    "tests/*",
    "setup.py",
    "example.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "coverage>=7.0.0",
    "ruff>=0.11.13",
    "wasmtime>=25.0.0",
    "mypy>=1.5.0",
]
